Updated README (added maintainer)

--- a/README
+++ b/README
@@ -72,3 +72,4 @@ Maintainer:
 
    Witold Pietraszek <witold.pietraszek@ixonos.com>
    Martin Lund <martin.lund@ixonos.com>
+   Jesper Larsen <jesper.larsen@ixonos.com>
