--- a/README
+++ b/README
@@ -33,7 +33,8 @@ Build system requirements:
 
    $ sudo apt-get install unzip mtd-utils groff bison flex gperf texinfo \
                           libtool automake libncurses5-dev gawk libexpat1-dev \
-                          gettext u-boot-tools libglib2.0-dev intltool docbook-xsl
+                          gettext u-boot-tools libglib2.0-dev intltool docbook-xsl \
+                          fakeroot 
 
 
    Also requires reconfiguring "/bin/sh" to use bash:
