--- a/README
+++ b/README
@@ -23,8 +23,10 @@ Main builds:
 
 Quick build guide:
 
-   buildgear build fs
-   buildgear build u-boot
+   $ git clone --recursive git://github.com/mini-distribution/beaglebone.git
+   $ cd beaglebone
+   $ buildgear build fs
+   $ buildgear build u-boot
 
 Build system requirements:
 
